LIST OF CHANGES FOR NPG-QC PACKAGE

 - added new npg_subtitution_metrics.pl script
 - switch to node 14 for CI, using npm from default conda pkg
 - remove dependency on npg_common::sequence::reference::base_count, which
   has been moved to an internal repository and is no longer available for
   teh CI builds

release 69.6.1
 - mqc skipper bug fix - inspect qc outcomes for review autoqc results
   only

release 69.6.0
 - GbS Minor_v1.0 plex included in genotype data extracted from iRODS 
 - change the type of the stats column in the 'samtools_stats' table from
   'mediumglob' to 'longglob' to accommodate the ampliconstats data for
   384 samples
 - mqc skipper - no fast tracking if any of mqc_outcome values are
   undefined in the review autoqc objects for a lane 

release 69.5.0
 - measures to speed-up generation of SeqQC pages:
   - add a prefetch for compositions and components when retrieving autoqc
     results from a database;
   - use in-line custom sort function instead of a closure for ref_match
     result objects  
   - disable a check for circular references in serialization of autoqc
     result objects

release 69.4.0
 - mqc skipper not to consider runs tagged 'no_auto' or 'no_mqc_skipper'

release 69.3.0
 - mqc skipper - following a change in RoboQC creteria for real samples
   (artic QC pass requirement is dropped), add a threshold for the number
   of artic fails
 - add option to restrict to a single gbs_plex to genotype_call_results_reporter  

release 69.2.0
 - the mqc skipper script is changed to always take into account the outcome
   of RoboQC assessment
 - improvements for SeqQC display of the generic results for artic data

release 69.1.0
 - an extension for the npg_mqc_skipper script to make it work for the
   Heron study, ie to take into consideration provisional manual QC
   outcomes from the review autoqc resuls and finalise QC outcomes
   for sequencing and libraries for runs that are expedited to archival

release 69.0.1