@@ -4,7 +4,10 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
  - switch to node 14 for CI, using npm from default conda pkg
  - remove dependency on npg_common::sequence::reference::base_count, which
    has been moved to an internal repository and is no longer available for
-   teh CI builds
+   the CI builds
+ - make labels for number of reads in SeqQC generic artic display
+   consistent with display for bam flagstats data, ie use 'reads'
+   instead of 'fragments'
 
 release 69.6.1
  - mqc skipper bug fix - inspect qc outcomes for review autoqc results
